--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple proxy server that redirects to different urls.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index --route='^/settings/ http://localhost:8081' --route='http://localhost:8080' --port=8040"
   },
   "keywords": [],
   "author": "ProtonMail",
